# garden

./: .gitignore  ARCHITECTURE.md  README.md
app/: .gitignore  next.config.ts  package.json  pnpm-lock.yaml  wrangler.toml
app/public/: locomotion-data.json  quadruped-data.json
app/public/nvidia-motion/: g1_kinematics.json
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/api/motionbricks/control/: route.ts
app/src/app/api/motionbricks/stream/: route.ts
app/src/app/character/: page.tsx
app/src/app/history/: page.tsx
app/src/app/nvidia-motion/: page.tsx
app/src/app/splats/: page.tsx
app/src/app/walk/: page.tsx
app/src/components/: LoadingParticles.tsx  Nav.tsx  Walker.tsx  hud-icons.tsx  walker-ui.tsx
app/src/lib/: api.ts  collider.ts  journey.ts  locomotion.ts  motionbricks-stream-worker.ts  physics.ts
locomotion-server/: export_onnx.py  export_quadruped.py  pyproject.toml  record_clips.py  server.py  validate_onnx.py
worker/: .dev.vars.example  package.json  pnpm-lock.yaml  wrangler.toml
worker/src/: index.ts
