[project]
name = "locomotion-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8.2",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "onnxruntime>=1.25.0",
    "pygltflib>=1.16.5",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "websockets>=16.0",
]
